@@ -213,16 +213,54 @@ class IO::File extends IO::Handle {
     
     return Sys::IO->ungetc($c, $stream);
   }
-
-  method write : int ($buffer : string, $length : int, $offset : int = 0) {
+  
+  method write : int ($string : string, $length : int = -1, $offset : int = 0) {
+    
+    unless ($string) {
+      die "The \$string must be defined.";
+    }
+    
+    unless ($offset >= 0) {
+      die "The \$offset must be greater than or equal to 0.";
+    }
+    
+    my $string_length = length $string;
+    
+    if ($length < 0) {
+      $length = $string_length - $offset;
+    }
+    
+    unless ($offset + $length <= $string_length) {
+      die "The \$offset + \$length must be lower than or equal to the length of the \$string.";
+    }
+    
     my $stream = $self->{stream};
     
-    return Sys::IO->fwrite($buffer, 1, $length, $stream);
+    return Sys::IO->fwrite($string, 1, $length, $stream);
   }
   
-  method read : int ($buffer : mutable string, $length : int, $offset : int = 0) {
+  method read : int ($string : mutable string, $length : int = -1, $offset : int = 0) {
+    
+    unless ($string) {
+      die "The \$string must be defined.";
+    }
+    
+    unless ($offset >= 0) {
+      die "The \$offset must be greater than or equal to 0.";
+    }
+    
+    my $string_length = length $string;
+    
+    if ($length < 0) {
+      $length = $string_length - $offset;
+    }
+    
+    unless ($offset + $length <= $string_length) {
+      die "The \$offset + \$length must be lower than or equal to the length of the \$string.";
+    }
+    
     my $stream = $self->{stream};
     
-    return Sys::IO->fread($buffer, 1, $length, $stream);
+    return Sys::IO->fread($string, 1, $length, $stream);
   }
 }
